--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 	  <div id="pinned">
       <div class="pinned-card shrink shrink-pinned">
         <i class="fas fa-thumbtack"></i><strong>О игре</strong>
-        <p>Игра была сделана для фанатов GTA San Andreas и мы решили улучшить оргинальную игру до ремейка!</p>
+        <p>Игра была сделана для фанатов GTA San Andreas и мы решили улучшить оригинальную игру до ремейка!</p>
         <a href="" class="btn">:)</a>
       </div>
     </div>
