--- a/download.html
+++ b/download.html
@@ -84,7 +84,7 @@
       <h1>Скачать игру через</h1>
       <nav class="nav">
         <button class="cybr-btn">
-          <a href="https://drive.google.com/file/d/1c-lXEswIMnGUtKvEmJUBO6OktKECWCd4/view?usp=sharing">
+          <a href="https://drive.google.com/u/0/uc?id=1c-lXEswIMnGUtKvEmJUBO6OktKECWCd4&export=download&confirm=t&uuid=4d22822b-96bc-43a3-839d-f99f7fa8af83">
             Гугл диск<span aria-hidden></span>
             <span aria-hidden class="cybr-btn__glitch">Гугл диск_</span>
             <span aria-hidden class="cybr-btn__tag"></span>
