--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
   <meta name="keywords" content="GTASA, GTASA Remake, GTASA Remake 2.0, gtasa-remake.tk">
   <meta name="theme-color" content="#4bb4f1">
   <link rel="icon" href="img/logo.png" type="image/x-icon">
+  <link rel="stylesheet" href="menu-ag.css" media="screen">
+<link rel="stylesheet" href="menubar-ag.css" media="screen">
+  <link id="u-theme-google-font" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i|Open+Sans:300,300i,400,400i,500,500i,600,600i,700,700i,800,800i">
 
   <!--
 	Notice:
@@ -36,6 +39,25 @@
 </head>
 
 <body>
+  <div  class="u-body u-xl-mode" data-lang="ru">
+    <section class="u-clearfix u-custom-color-2 u-section-1" id="sec-ff4e">
+      <div class="u-clearfix u-sheet u-sheet-1">
+        <img class="u-expanded-height-sm u-expanded-height-xs u-image u-image-default u-preserve-proportions u-image-1" src="images/3.png" alt="" data-image-width="400" data-image-height="400">
+        <p class="u-text u-text-default u-text-1">
+          <a class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-white u-btn-1" href="https://alexogroundgames.tk/">Сайт<span style="font-weight: 700;"></span>
+          </a>
+        </p>
+        <p class="u-text u-text-default u-text-2">
+          <a class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-white u-btn-2" href="https://vk.com/alexogroundgames"> ВКонтакте<span style="font-weight: 700;"></span>
+          </a>
+        </p>
+        <p class="u-text u-text-default u-text-3">
+          <a class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-white u-btn-3" href="https://discord.gg/GfTkbwq7Um"> Дискорд<span style="font-weight: 700;"></span>
+          </a>
+        </p>
+      </div>
+    </section>
+  </div>
 
   <div id="target"></div>
 
@@ -129,6 +151,6 @@
     <!-- END DO NOT REMOVE -->
     <!-- END DO NOT REMOVE -->
     <!-- END DO NOT REMOVE -->
-    <p>Copyright &copy; {{server_name}} | 2022</p>
+    <p>Copyright &copy; {{server_name}} | 2022-2023</p>
   </footer>
 </body>
